@@ -52,6 +52,11 @@ def load_blocks():
     factory.BlockFactory.BlockFactory().setName("minecraft:blue_ice").setSpeedMultiplier(2.2).setAllSideSolid(
         False).finish()
 
+    factory.BlockFactory.BlockFactory().setName("minecraft:pumpkin").finish()
+    factory.BlockFactory.BlockFactory().setName("minecraft:carved_pumpkin").setCustomModelStateFunction(
+        lambda _: {"facing": "north"}).finish()
+    factory.BlockFactory.BlockFactory().setName("minecraft:melon").finish()
+
     factory.BlockFactory.BlockFactory().setName("minecraft:glass").setAllSideSolid(False).finish()
 
     for color in G.taghandler.taggroups["naming"].tags["#minecraft:colors"].entries:
